# Multi-Module-Azure-IoT-Edge-Pipeline

./: .env.template  .gitignore  GUIDE.md  Makefile  README.md  docker-compose.pipeline.yml  docker-compose.yml
config/: deployment.template.json
modules/analytics_alert/: Dockerfile  requirements.txt
modules/analytics_alert/src/: analytics.py  main.py
modules/analytics_alert/tests/: test_analytics.py
modules/data_filter/: CMakeLists.txt  Dockerfile
modules/data_filter/include/: filter.h  json_parser.h
modules/data_filter/src/: filter.cpp  json_parser.cpp  main.cpp
modules/sensor_simulator/: CMakeLists.txt  Dockerfile
modules/sensor_simulator/include/: message_builder.h  sensor.h
modules/sensor_simulator/src/: main.cpp  message_builder.cpp  sensor.cpp
scripts/: run-edge-sim.sh  send-to-hub.py
